alignment fix

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body{
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
-  max-width: 75%;
+  width: 60rem;
 }
 
 .container .page-info .info-wrapper img{
